SKN-63 create get campaign endpoints
